infra/cdk.out/NestRestInfraStack.template.json
{
  "Resources": {
    "AppVpc80F1F7F9": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestRestInfraStack/AppVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/Resource"
      }
    },
    "AppVpcDMZSubnet1SubnetFABDE5AC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/17",
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        },
        "AvailabilityZone": "us-east-2a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "DMZ"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NestRestInfraStack/AppVpc/DMZSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet1/Subnet"
      }
    },
    "AppVpcDMZSubnet1RouteTable6D5B230E": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestRestInfraStack/AppVpc/DMZSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet1/RouteTable"
      }
    },
    "AppVpcDMZSubnet1RouteTableAssociationE737622C": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppVpcDMZSubnet1RouteTable6D5B230E"
        },
        "SubnetId": {
          "Ref": "AppVpcDMZSubnet1SubnetFABDE5AC"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet1/RouteTableAssociation"
      }
    },
    "AppVpcDMZSubnet1DefaultRoute36DDD450": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppVpcDMZSubnet1RouteTable6D5B230E"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AppVpcIGW826A76F0"
        }
      },
      "DependsOn": [
        "AppVpcVPCGW1D33210A"
      ],
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet1/DefaultRoute"
      }
    },
    "AppVpcDMZSubnet2SubnetC57A9655": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/17",
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        },
        "AvailabilityZone": "us-east-2b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "DMZ"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "NestRestInfraStack/AppVpc/DMZSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet2/Subnet"
      }
    },
    "AppVpcDMZSubnet2RouteTable6CFDD681": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestRestInfraStack/AppVpc/DMZSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet2/RouteTable"
      }
    },
    "AppVpcDMZSubnet2RouteTableAssociationE90B3BCC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppVpcDMZSubnet2RouteTable6CFDD681"
        },
        "SubnetId": {
          "Ref": "AppVpcDMZSubnet2SubnetC57A9655"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet2/RouteTableAssociation"
      }
    },
    "AppVpcDMZSubnet2DefaultRouteAE5EFF32": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "AppVpcDMZSubnet2RouteTable6CFDD681"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "AppVpcIGW826A76F0"
        }
      },
      "DependsOn": [
        "AppVpcVPCGW1D33210A"
      ],
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/DMZSubnet2/DefaultRoute"
      }
    },
    "AppVpcIGW826A76F0": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NestRestInfraStack/AppVpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/IGW"
      }
    },
    "AppVpcVPCGW1D33210A": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        },
        "InternetGatewayId": {
          "Ref": "AppVpcIGW826A76F0"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppVpc/VPCGW"
      }
    },
    "AppCluster99B78AC1": {
      "Type": "AWS::ECS::Cluster",
      "Properties": {
        "ClusterName": "app-cluster"
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/AppCluster/Resource"
      }
    },
    "ApiRepositoryB8378B43": {
      "Type": "AWS::ECR::Repository",
      "Properties": {
        "RepositoryName": "nest-rest-api"
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete",
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/ApiRepository/Resource"
      }
    },
    "apiserviceLBB085CC0A": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          }
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "apiserviceLBSecurityGroup6F0EEE03",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Ref": "AppVpcDMZSubnet1SubnetFABDE5AC"
          },
          {
            "Ref": "AppVpcDMZSubnet2SubnetC57A9655"
          }
        ],
        "Type": "application"
      },
      "DependsOn": [
        "AppVpcDMZSubnet1DefaultRoute36DDD450",
        "AppVpcDMZSubnet2DefaultRouteAE5EFF32"
      ],
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/LB/Resource"
      }
    },
    "apiserviceLBSecurityGroup6F0EEE03": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB NestRestInfraStackapiserviceLB1883F75F",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/LB/SecurityGroup/Resource"
      }
    },
    "apiserviceLBSecurityGrouptoNestRestInfraStackapiserviceServiceSecurityGroupE8DF80BB80B988ACEE": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "apiserviceLBSecurityGroup6F0EEE03",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "apiserviceServiceSecurityGroupCC6B223C",
            "GroupId"
          ]
        },
        "FromPort": 80,
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/LB/SecurityGroup/to NestRestInfraStackapiserviceServiceSecurityGroupE8DF80BB:80"
      }
    },
    "apiserviceLBPublicListener94DE5E2F": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "apiserviceLBPublicListenerECSGroupB0AD63FB"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "apiserviceLBB085CC0A"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/LB/PublicListener/Resource"
      }
    },
    "apiserviceLBPublicListenerECSGroupB0AD63FB": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetGroupAttributes": [
          {
            "Key": "stickiness.enabled",
            "Value": "false"
          }
        ],
        "TargetType": "ip",
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "apiserviceTaskDefTaskRoleCD114C81": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/TaskDef/TaskRole/Resource"
      }
    },
    "apiserviceTaskDefEC88953D": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Essential": true,
            "Image": {
              "Fn::Join": [
                "",
                [
                  {
                    "Fn::Select": [
                      4,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "ApiRepositoryB8378B43",
                              "Arn"
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  ".dkr.ecr.",
                  {
                    "Fn::Select": [
                      3,
                      {
                        "Fn::Split": [
                          ":",
                          {
                            "Fn::GetAtt": [
                              "ApiRepositoryB8378B43",
                              "Arn"
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  ".",
                  {
                    "Ref": "AWS::URLSuffix"
                  },
                  "/",
                  {
                    "Ref": "ApiRepositoryB8378B43"
                  },
                  ":v1.1.0"
                ]
              ]
            },
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "apiserviceTaskDefwebLogGroupD0D7E978"
                },
                "awslogs-stream-prefix": "api-service",
                "awslogs-region": "us-east-2"
              }
            },
            "Name": "web",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "apiserviceTaskDefExecutionRole978B01AE",
            "Arn"
          ]
        },
        "Family": "NestRestInfraStackapiserviceTaskDef9F6BC813",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "apiserviceTaskDefTaskRoleCD114C81",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/TaskDef/Resource"
      }
    },
    "apiserviceTaskDefwebLogGroupD0D7E978": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/TaskDef/web/LogGroup/Resource"
      }
    },
    "apiserviceTaskDefExecutionRole978B01AE": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/TaskDef/ExecutionRole/Resource"
      }
    },
    "apiserviceTaskDefExecutionRoleDefaultPolicyF409FB89": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "ApiRepositoryB8378B43",
                  "Arn"
                ]
              }
            },
            {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "apiserviceTaskDefwebLogGroupD0D7E978",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "apiserviceTaskDefExecutionRoleDefaultPolicyF409FB89",
        "Roles": [
          {
            "Ref": "apiserviceTaskDefExecutionRole978B01AE"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/TaskDef/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "apiserviceServiceBBA6BC94": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "AppCluster99B78AC1"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 1,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "web",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "apiserviceLBPublicListenerECSGroupB0AD63FB"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "apiserviceServiceSecurityGroupCC6B223C",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Ref": "AppVpcDMZSubnet1SubnetFABDE5AC"
              },
              {
                "Ref": "AppVpcDMZSubnet2SubnetC57A9655"
              }
            ]
          }
        },
        "TaskDefinition": {
          "Ref": "apiserviceTaskDefEC88953D"
        }
      },
      "DependsOn": [
        "apiserviceLBPublicListenerECSGroupB0AD63FB",
        "apiserviceLBPublicListener94DE5E2F"
      ],
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/Service/Service"
      }
    },
    "apiserviceServiceSecurityGroupCC6B223C": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NestRestInfraStack/api-service/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "AppVpc80F1F7F9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/Service/SecurityGroup/Resource"
      }
    },
    "apiserviceServiceSecurityGroupfromNestRestInfraStackapiserviceLBSecurityGroup89028FF78027A363C9": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "apiserviceServiceSecurityGroupCC6B223C",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "apiserviceLBSecurityGroup6F0EEE03",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/api-service/Service/SecurityGroup/from NestRestInfraStackapiserviceLBSecurityGroup89028FF7:80"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SwW7CMAz9lt1Dxpi0O2MbQkIaahFXlAbTGUJSJQ4IVf33pWlLOzbtlOeX59h+zoSP+fhBXNxI7o4jhRkvUxLyyAK1LUFOeLkpJJvt9WY1YyufKZSpzzRQzfUoMZ5gLTIFPd9zU+eMREFo9E1cg4UmsEE5FwQXcW3LtNGUQiNfJ9DEUpDeIl3n1vgiFviXeM8tOPeLXujIVwyk4+VMeReq16oOfgibi7pld3yDPWrsGr5njCaBGuyAa3NTsGeUjQkNrMtZXiZQGIdkbJyyj2I320JQ7YTj06IIDkenlkbsXoUSWsLu7nVQwhFKFRRZVKDOz2FVf2fHGX/EQx2G0XWr6fDgfh0qhwV1Pg/CiqE4hcFMs/N4rkzIixM2qGLK5MHspclvT3S4qlgCznjb2PXpqfDNX2rZimmzA35wj+enF/70HD7qwSGOrNeEJ+BJc34D8 [...]
      },
      "Metadata": {
        "aws:cdk:path": "NestRestInfraStack/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "apiserviceLoadBalancerDNS0F8683E6": {
      "Value": {
        "Fn::GetAtt": [
          "apiserviceLBB085CC0A",
          "DNSName"
        ]
      }
    },
    "apiserviceServiceURLFF1A3D0C": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "apiserviceLBB085CC0A",
                "DNSName"
              ]
            }
          ]
        ]
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
